--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -105,7 +105,9 @@
 						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Expresses the deepest thoughts of civilization</li>
 						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Influence was evident in the Progressive Rock movement: bands like Genesis, King Crimson, Pink Floyd, and Yes took what they could use from the classical world and made the music their own</li>
 					</ul>
-				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
+					<div style="text-align: center"><img src="classical_history_1.jpg" width="240" height="150"/></div>
+					<div style="text-align: center"><img src="baroque vs classical.jpg" width="200" height="150"/></div>
+					<div style="text-align: center"><img src="classicalcomposers.jpg" width="200" height="150"/></div>
 				</div>
 			</details>
 			<details>
@@ -115,12 +117,18 @@
 				<ul>
 					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">With the pop genre, the most ~popular~ songs in the mainstream could be categorized into a group with characteristics of all sorts of styles of music</li>
 					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Due to the growing popularity of radio, television, and music icons like Elvis Presley, music became at lot more mainstream and accessible</li>
+					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Popular music was any non-folk form which was initialy intended for a small elite audience due to elements of fine art, but quicky gained poopularity all around</li>
+					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">After the disapperance of folk music following the Industrial Revolutioin, popular music of the Victorian era had dominated waltz and operettas</li>
 				</ul>
 				<p>Impact:</p>
 				<ul>
 					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Pop music has the ability to encourage individuals to think about where they're going in the world</li>
+					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">It allows people to dwell in the vast stretches of their imaginations </li>
+					<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Popular music is known to buoy your moods and fend off depression, but can also improve bood fow and lower stress levels</li>
 				</ul>
-				<img src="elvispresley.jpg" />
+				<div style="text-align: center"><img src="elvispresley.jpg" width="220" height="150"/></div>
+				<div style="text-align: center"><img src="popularmusic2000s.jpg" width="220" height="150"/></div>
+				<div style="text-align: center"><img src="popclothing.jpg" width="200" height="150"/></div>
 			  </div>
 			</details>
 			<details>
@@ -132,7 +140,16 @@
 						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">The genre's roots lie in folk music, ballads, and settlers in areas like the Appalachians. </li>
 						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Fiddlin' John Carson created one of the first popular country songs in the 1920s, which led to the further growth of the genre in mainstream music.</li>
 					</ul>
-				  <img src="Fiddlin'JohnCarson.jpg" />
+					<p>Impact:</p>
+					<ul>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Since country music is supposed to be an exemplar of its own country's culture, it influences how people view their country and culture</li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Since country music adopted the sounds of popular genres of music it was able to increase more listeners and have a similar impact as pop music does</li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Country music was associated with independence and grit; singers explain about how they got over fighting, drinking, etc. which influences and encourages others to do the same</li>
+					</ul>
+				<div style="text-align: center"><img src="Fiddlin'JohnCarson.jpg" width="140" height="150"/></div>
+				<div style="text-align: center"><img src="countrymusic.jpg" width="200" height="150"/></div>
+				<div style="text-align: center"><img src="countryclothing.jpg" width="150" height="150"/></div>
+				<div style="text-align: center"><img src="country.jpg" width="150" height="150"/></div>
 				</div>
 			  </details>
 			<details>
@@ -141,8 +158,20 @@
 					<p>History:</p>
 					<ul>
 						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">The genre of jazz originated with west </li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Originated during the early 1900s, country music was a significant part of rural southern and western American cultures. </li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">The genre's roots lie in folk music, ballads, and settlers in areas like the Appalachians. </li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Fiddlin' John Carson created one of the first popular country songs in the 1920s, which led to the further growth of the genre in mainstream music.</li>
 					</ul>
-				  <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/344846/_alfred.jpg" />
+					<p>Impact:</p>
+					<ul>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Jazz music had encouraged everything from fashion to poetry of the Civil Rights movement </li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Jazz clothing style had also made it easier to dance to Jazz music</li>
+						<li style="font-family: 'Antonio', sans-serif; font-size: 20px; margin-top: 8px; margin-bottom: 8px;">Its mostly known for its poetry to bring importance and recognition to cultures that were heavily discriminated and brought a new view to how they were seen.</li>
+					</ul>
+					<div style="text-align: center"><img src="jazzmusic.jpg" width="170" height="150"/></div>
+					<div style="text-align: center"><img src="jazz fashion.png" width="200" height="150"/></div>
+					<div style="text-align: center"><img src="jazzclothing.jpg" width="130" height="150"/></div>
+					<div style="text-align: center"><img src="jazzinstruments.jpg" width="140" height="150"/></div>
 				</div>
 			</details>
 		  </section>
