--- a/Importance of Each Genre.html
+++ b/Importance of Each Genre.html
@@ -31,7 +31,7 @@
                     <li><a href="Music Genres.html">Genres</a></li>
                     <li><a href="Famous Artists.html">Artists</a></li>
                     <li><a href="Importance of Each Genre.html">History</a></li>
-					<li><a href="header.php">Search</a>
+					<li><a href="search.html"></a><a href="searchoption.html">Search</a></li>
                 </div>
             </ul>
         </nav>
