--- a/search.html
+++ b/search.html
@@ -2,7 +2,7 @@
 <body>
 
 <form action="phpSearch.php" method="post">
-Search <input type="text" name="search"><br>
+Search Genres<input type="text" name="search"><br>
 <input type ="submit">
 </form>
 
