--- a/Famous Artists.html
+++ b/Famous Artists.html
@@ -31,7 +31,7 @@
                     <li><a href="Music Genres.html">Genres</a></li>
                     <li><a href="Famous Artists.html">Artists</a></li>
                     <li><a href="Importance of Each Genre.html">History</a></li>
-                    <li><a href="dbh.php">Search</a></li>
+                    <li><a href="search.html">Search</a></li>
                     </li>
                 </div>
             </ul>
